FEAT [BACK BACKEND BFF]: add controller to get services and providers